Updated gigs page and gig modals

--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -8,6 +8,9 @@ html(lang='en-US')
 
         title Ethearnal
 
+        // FAVICON
+        link(rel="shortcut icon", type="image/png", href="images/favicon.png")
+
         // START of LINKS
 
         // Normalize.css
