--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -118,29 +118,29 @@ section.gigs-page-content
 
             .gigs-container
 
-                //- .gig.content-block(data-toggle="modal", data-target="#gigModal")
-                //-     button#dropdowngiga0.mdl-button.mdl-js-button.mdl-button--icon.dropdown-button: i.material-icons more_vert
-                //-     ul.mdl-menu.mdl-menu--bottom-right.mdl-js-menu.mdl-js-ripple-effect(for="dropdowngiga0")
-                //-         li.mdl-menu__item.open-modal(open-modal="#edit-gig") Edit
-                //-         li.mdl-menu__item.delete Delete
+                .gig.content-block(data-toggle="modal", data-target="#gigModal")
+                    button#dropdowngiga0.mdl-button.mdl-js-button.mdl-button--icon.dropdown-button: i.material-icons more_vert
+                    ul.mdl-menu.mdl-menu--bottom-right.mdl-js-menu.mdl-js-ripple-effect(for="dropdowngiga0")
+                        li.mdl-menu__item.open-modal(open-modal="#edit-gig") Edit
+                        li.mdl-menu__item.delete Delete
 
-                //-     .ui.fluid.image
-                //-         .ui.black.ribbon.label Category
-                //-         .image-block: img(src="images/paypal.jpg")
+                    .ui.fluid.image
+                        .ui.black.ribbon.label Category
+                        .image-block: img(src="images/paypal.jpg")
 
-                //-     .owner-info
-                //-         img(src="/api/v1/profile/?q=avatar", alt="Avatar")
-                //-         h5 owner_nickname
-                //-         h4 Entry Level
+                    .owner-info
+                        img(src="/api/v1/profile/?q=avatar", alt="Avatar")
+                        h5 owner_nickname
+                        h4 Entry Level
 
-                //-     p Gig Description
+                    p Gig Description
 
-                //-     .lower-info
-                //-         .reputation
-                //-             i.material-icons polymer
-                //-             span 5k+
+                    .lower-info
+                        .reputation
+                            i.material-icons polymer
+                            span 5k+
 
-                //-         h6.expire expires in 5 mins
+                        h6.expire expires in 5 mins
 
-                //-     .footer
-                //-         h4 Starting at <span>$25</span>
+                    .footer
+                        h4 Starting at <span>$25</span>
