--- a/ethnode/webui/styles/background-image.sass
+++ b/ethnode/webui/styles/background-image.sass
@@ -7,10 +7,10 @@ section.background-image
         width: 100%
         height: 400px
 
-section.background-image, .post .image
+section.background-image, .modal-body .image
     .button-next, .button-prev
         position: absolute
-        z-index: 100
+        z-index: 1
         display: none
 
         i
@@ -30,25 +30,10 @@ section.background-image, .post .image
     .button-prev
         left: 0
 
-.post .image
+.modal-body .image
     .button-prev, .button-next
-
-        i
-            line-height: 125px
-            font-size: 55px
-
-    .button-prev
-        left: 15px
-
-    .button-next
-        right: -10px
-
-    .owl-carousel .item img
-        width: 100%
-        height: 125px !important
-
-.modal-body .post .image
-    .button-prev, .button-next
+        position: absolute
+        z-index: 1
 
         i
             font-size: 75px
