--- a/ethnode/webui/styles/header.sass
+++ b/ethnode/webui/styles/header.sass
@@ -68,9 +68,12 @@ header .container nav
 
 
     .navbar-header a
-        padding: 18px
+        padding: 0
         position: relative
-        top: 3px
+        top: -3px
+
+        img
+            max-width: 205px
 
 
     #navigation
