--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -117,9 +117,14 @@ section.profiles-page-content
                             text-decoration: underline
 
                         h4
-                            color: #86939e
+                            color: #92A8D1
                             font-size: 12px
                             margin-top: 2px
+
+                            i
+                                font-size: 12px
+                                position: relative
+                                top: 1px
 
                     p
                         font-size: 16px
