--- a/ethnode/webui/mixins/header.jade
+++ b/ethnode/webui/mixins/header.jade
@@ -14,7 +14,7 @@ header.main-header
                         span
 
 
-                a.navbar-brand(href='').hidden-xs Ethearnal Alpha
+                a.navbar-brand(href='').hidden-xs: img(src="images/logo.png", alt="Ethearnal Logo")
 
                 form(action="#" style="float: left; max-height: 62px;")
                     .ui.action.input(style="margin-left: 25px; margin-top: 10px")
