--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -1,5 +1,4 @@
 @import "header"
-@import "dropdowns"
 @import "profile-information"
 @import "profile-documentation-tabs"
 @import "panel-heading"
@@ -148,145 +147,28 @@ section.documentation .container
 
 
 
-.value
-    position: absolute
-    top: 30px
-    left: 50%
-    margin: 0 0 0 -20px
-    width: 40px
-    text-align: center
-    display: block
+// .value
+//     position: absolute
+//     top: 30px
+//     left: 50%
+//     margin: 0 0 0 -20px
+//     width: 40px
+//     text-align: center
+//     display: block
 
-    // optional
-    font-weight: normal
-    font-family: Verdana, Arial, sans-serif
-    font-size: 14px
-    color: #333
+//     // optional
+//     font-weight: normal
+//     font-family: Verdana, Arial, sans-serif
+//     font-size: 14px
+//     color: #333
 
-    i
-        font-style: normal
+//     i
+//         font-style: normal
 
-.price-range-both.value
-    width: 100px
-    margin: 0 0 0 -50px
-    top: 26px
+// .price-range-both.value
+//     width: 100px
+//     margin: 0 0 0 -50px
+//     top: 26px
 
-.price-range-both
-    display: none
-
-
-
-// .value {
-//   position: absolute;
-//   top: 30px;
-//   left: 50%;
-//   margin: 0 0 0 -20px;
-//   width: 40px;
-//   text-align: center;
-//   display: block;
-
-//   /* optional */
-
-//   font-weight: normal;
-//   font-family: Verdana,Arial,sans-serif;
-//   font-size: 14px;
-//   color: #333;
-// }
-
-// .price-range-both.value {
-//   width: 100px;
-//   margin: 0 0 0 -50px;
-//   top: 26px;
-// }
-
-// .price-range-both {
-//   display: none;
-// }
-
-// .value i {
-//   font-style: normal;
-// }
-
-
-
-
-
-
-
-
-// .tick-animation-ctn
-//   text-align: center
-//   margin-top: 5em
-
-// @-webkit-keyframes checkmark
-//   0%
-//     stroke-dashoffset: 100px
-
-//   100%
-//     stroke-dashoffset: 200px
-
-
-// @-ms-keyframes checkmark
-//   0%
-//     stroke-dashoffset: 100px
-
-//   100%
-//     stroke-dashoffset: 200px
-
-
-// @keyframes checkmark
-//   0%
-//     stroke-dashoffset: 100px
-
-//   100%
-//     stroke-dashoffset: 0px
-
-
-// @-webkit-keyframes checkmark-circle
-//   0%
-//     stroke-dashoffset: 480px
-
-//   100%
-//     stroke-dashoffset: 960px
-
-
-// @-ms-keyframes checkmark-circle
-//   0%
-//     stroke-dashoffset: 240px
-
-//   100%
-//     stroke-dashoffset: 480px
-
-
-// @keyframes checkmark-circle
-//   0%
-//     stroke-dashoffset: 480px
-
-//   100%
-//     stroke-dashoffset: 960px
-
-
-// @keyframes colored-circle
-//   0%
-//     opacity: 0
-
-//   100%
-//     opacity: 100
-
-// .inlinesvg .svg svg
-//   display: inline
-
-// .icon--order-success svg
-//   polyline
-//     -webkit-animation: checkmark 0.25s ease-in-out 0.7s backwards
-//     animation: checkmark 0.25s ease-in-out 0.7s backwards
-//   circle
-//     -webkit-animation: checkmark-circle 0.6s ease-in-out backwards
-//     animation: checkmark-circle 0.6s ease-in-out backwards
-//     &#colored
-//       -webkit-animation: colored-circle 0.6s ease-in-out 0.7s backwards
-//       animation: colored-circle 0.6s ease-in-out 0.7s backwards
-
-
-
-
+// .price-range-both
+//     display: none
