--- a/ethnode/webui/styles/newstyles/gig-inner.sass
+++ b/ethnode/webui/styles/newstyles/gig-inner.sass
@@ -1,173 +1,130 @@
 .modal.timeline .modal-dialog .modal-content
     padding: 0
 
-.timeline-post
-    max-height: 320px
 
-    .post p
-        overflow: hidden
-        text-overflow: ellipsis
-        display: -webkit-box
-        max-height: 320px
-        -webkit-line-clamp: 9
-        -webkit-box-orient: vertical
-
-
-.timeline-post, .modal.timeline .modal-dialog .modal-content .modal-body
-    padding: 0
-    border-bottom: 1px solid #e1e8ee
-    cursor: pointer
-    margin-top: 10px
-    padding-top: 24px
-    background-color: white
-
-    .input-header
-        background-color: #f0f4f7
-        padding-left: 20px
-        margin-bottom: 10px
-        cursor: auto
-        margin-top: -24px
-
-        i, span
-            font-size: 14px
-            line-height: 40px
-            color: #5e6977
-            margin: 0
-            font-weight: 400
-
-        span
-            margin-left: 10px
-
-
-    .picture
-        float: left
-
-        img
-            height: 60px
-            width: 60px
-            margin-left: 20px
-            border-radius: 100%
-            margin-right: 15px
-
-    .post.post-input
-        margin-bottom: 30px
-        padding-right: 25px
-        margin-top: 15px
-        margin-left: 95px
-
-        textarea
-            box-shadow: none
-            border: none
-            border-bottom: 1px solid rgba(34,36,38,.15)
-            background-color: transparent
-            font-family: 'Roboto', sans-serif
-            line-height: 1.44
-            color: #86939e
-            margin-bottom: 15px
-
-
-    .post
-
-        h5
-            font-size: 14px
-            line-height: 1
-            color: #5e6977
-            margin: 0
-
-        h5.name
-            margin-top: 5px
-
-        h5.date
-            font-weight: 400
-            margin-top: 5px
-            color: #86939e
-
-        h5.year-happend
-            text-align: right
-            position: absolute
-            top: 29px
-            right: 20px
-            font-weight: 400
-            color: #86939e
-
-        h5.company
-            text-align: right
-            position: absolute
-            top: 52px
-            right: 20px
-            font-weight: 400
-            color: #86939e
-
-        p
-            font-size: 14px
-            color: #86939e
-            line-height: 1.71
-            margin-left: 95px
-            margin-top: 20px
-            margin-bottom: 30px
-            padding-right: 15px
-
-        .image
-            width: 50%
-            height: 50%
-            float: right
-            padding-left: 25px
-            margin-top: 20px
-            margin-right: 15px
-            margin-bottom: 30px
-            position: relative
-
-            img
-                width: 100%
-                min-height: 50px
-                max-height: 200px
-
-
-
-.modal.timeline .modal-dialog .modal-content
+#gigModal .modal-content
     border-radius: 0
+    padding: 0
 
     .modal-body
         border: none
         cursor: auto
+        padding: 0
+        border-bottom: none
+        cursor: pointer
+        margin-top: 10px
+        background-color: white
 
-        i.icon-more
+        h2.title
+            font-size: 32px
+            font-weight: 400
+            color: #4a4a4a
+            margin: 0
+            padding-left: 25px
+            padding-right: 50px
+
+        button.dropdown-button
             position: absolute
-            right: 30px
-            font-size: 22px
+            right: 10px
+            font-size: 28px
             color: #bdc6cf
-            transform: rotate(-90deg)
-            top: 0
+            top: 8px
             cursor: pointer
 
-        .visible-xs i
-            position: absolute
-            top: 0
-            left: 10px
-            font-size: 22px
-            color: #bdc6cf
-            cursor: pointer
+        .image
+            width: 100%
+            height: 100%
+            float: none
+            margin: 0
+            padding: 0
+            margin-top: 20px
+            position: relative
 
-        .post
-            .image
-                width: 100%
+            .items .item
+                max-height: 505px
                 height: 100%
-                float: none
-                margin: 0
-                padding: 0
-                margin-top: 20px
-                padding-top: 20px
-                position: relative
+                overflow: hidden
 
-                .items .item img
+                img
                     width: 100%
-                    height: 100%
+                    height: auto
                     min-height: auto
                     max-height: inherit
 
-            p
+        .owner-info
+            margin-left: 20px
+            margin-top: 10px
+
+            img
+                float: left
+                width: 28px
+                height: 28px
+                border-radius: 100%
+                margin-top: 1px
+
+
+            h5, h4
                 margin: 0
-                padding: 0 20px
-                margin-top: 20px
-                margin-bottom: 20px
-                text-align: justify
+                font-size: 12px
+                font-weight: 400
+                line-height: 1
+                color: black
+                margin-left: 40px
+                transition: all 0.15s ease-in
+
+            h5:hover, h5:active, h5:focus
+                cursor: pointer
+                text-decoration: underline
+
+            h4
+                color: #86939e
+                font-size: 12px
+                margin-top: 2px
+
+                i
+                    font-size: 13px
+                    position: relative
+                    top: 2px
+                    color: #92A8D1
+
+                span
+                    float: right
+                    margin-right: 25px
+
+
+        p.gig-description
+            margin: 0
+            padding: 0 20px
+            margin-top: 20px
+            margin-bottom: 20px
+            text-align: justify
+
+        .extras-box
+            height: 150px
+            border: 2px solid #5e6977
+            border-left: none
+            border-right: none
+            margin-bottom: 15px
+
+            h3
+                text-transform: uppercase
+                color: #5e6977
+                margin: 0 auto
+                line-height: 150px
+                text-align: center
+
+
+        .footer
+            float: right
+            margin-right: 15px
+            margin-bottom: 10px
+
+            button.buy
+                color: #89ABE3
+
+                span i
+                    font-size: 14px
+                    position: relative
+                    top: -1px
+
+
