--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -110,9 +110,9 @@ section.gigs-page-content
                                 .gear-tooth
                                 .gear-tooth
 
-                    .marker.marker-0: <sup>$</sup>0
-                    .marker.marker-50: <sup>$</sup>5,000
-                    .marker.marker-100: <sup>$</sup>10,000+
+                    .marker.marker-0: <sup><i class="material-icons">polymer</i></sup>0
+                    .marker.marker-50: <sup><i class="material-icons">polymer</i></sup>5,000
+                    .marker.marker-100: <sup><i class="material-icons">polymer</i></sup>10,000+
 
         .gigs.col-md-9
 
@@ -143,4 +143,4 @@ section.gigs-page-content
                         h6.expire expires in 5 mins
 
                     .footer
-                        h4 Starting at <span>$25</span>
+                        h4 Starting at <span><i class="material-icons">polymer</i>25</span>
