--- a/ethnode/webui/styles/newstyles/modals/body.sass
+++ b/ethnode/webui/styles/newstyles/modals/body.sass
@@ -24,6 +24,11 @@
                 float: left
                 margin-top: 10px
 
+            label.ui.label i
+                font-size: 14px
+                position: relative
+                top: 2px
+
 
     .form-group
         position: relative
