--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -182,6 +182,13 @@ section.profiles-page-content
                             span
                                 font-size: 18px
                                 font-weight: 400
-                                margin-left: 2px
+                                margin-left: 5px
                                 position: relative
                                 top: 2px
+
+                                i
+                                    font-size: 18px
+                                    position: relative
+                                    top: 2px
+                                    right: 2px
+                                    color: #111
