--- a/ethnode/webui/mixins/pages/profile.jade
+++ b/ethnode/webui/mixins/pages/profile.jade
@@ -28,7 +28,7 @@ section.documentation(style="display: none")
                     h5.profile-information-position
                     p.location
 
-                    button.hire Hire ($X/hr)
+                    //- button.hire Hire ($X/hr)
                     button.leave-msg Send Message
 
             .profile-information.middle
@@ -55,16 +55,11 @@ section.documentation(style="display: none")
                 ul.nav.nav-tabs(role="tablist")
                     li.active.timeline-li(role="presentation"): a(href="#gigs", aria-controls="gigs", role="tab", data-toggle="tab") Gigs
                     li.timeline-li(role="presentation"): a(href="#portfolio", aria-controls="portfolio", role="tab", data-toggle="tab") Portfolio
-                    li.timeline-li(role="presentation"): a(href="#profile", aria-controls="profile", role="tab", data-toggle="tab") Profile
 
                     li.dropdownButton
                         button#addThings.mdl-button.mdl-js-button.mdl-button--icon: i.material-icons add
                         ul.mdl-menu.mdl-menu--bottom-right.mdl-js-menu.mdl-js-ripple-effect(for="addThings")
                             li.mdl-menu__item.open-modal(open-modal="#add-portfolio") Add Portfolio Element
-                            li.mdl-menu__item.open-modal(open-modal="#add-job") Add Work Experience
-                            li.mdl-menu__item.open-modal(open-modal="#add-education") Add Education
-                            li.mdl-menu__item.open-modal(open-modal="#add-language") Add Language
-                            li.mdl-menu__item.open-modal(open-modal="#add-skill") Add Skill
                             li.mdl-menu__item.open-modal(open-modal="#add-gig") Add Gig
 
 
@@ -78,7 +73,3 @@ section.documentation(style="display: none")
                     // Portfolio TAB
                     .tab-pane.fade#portfolio.col-xs-12(role="tabpanel")
                         include ../tabs/portfolio
-
-                    // Profile TAB
-                    .tab-pane.fade#profile.col-xs-12(role="tabpanel")
-                        include ../tabs/profile
