--- a/ethnode/webui/styles/newstyles/sliders.sass
+++ b/ethnode/webui/styles/newstyles/sliders.sass
@@ -1,7 +1,13 @@
 sup
-  font-size: 80%
-  position: relative
-  top: -1px
+    font-size: 80%
+    position: relative
+    top: -1px
+
+    i.material-icons
+        font-size: 11px
+        position: relative
+        top: 2px
+        right: 2px
 
 .slider-wrapper, .slider-wrapper-2
     width: 200px
