Changes to the profile page. Gigs will show up in your profile page, added portfolio elements, some other little things

--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -63,6 +63,9 @@ html(lang='en-US')
         include mixins/modals/education/add-education
         include mixins/modals/education/edit-education
 
+        include mixins/modals/portfolio/add-portfolio
+        include mixins/modals/portfolio/edit-portfolio
+
         include mixins/modals/language/add-language
         include mixins/modals/language/edit-language
 
