--- a/ethnode/webui/mixins/tabs/orders.jade
+++ b/ethnode/webui/mixins/tabs/orders.jade
@@ -1,4 +1,4 @@
-.gigs-container-profile
+.gigs-container-orders
 
     .gig.content-block(data-toggle="modal", data-target="#gigModal")
         button#dropdowngiga0.mdl-button.mdl-js-button.mdl-button--icon.dropdown-button: i.material-icons more_vert
